@@ -73,5 +73,44 @@ sub get_property_defaults
 	return %defaults;
 }
 
+sub render_xml_schema
+{
+	my( $self, $session ) = @_;
+
+	my $datasetid = $self->get_property( "datasetid" );
+
+	my $element = $session->make_element( "xs:element", name => $self->get_name );
+
+	if( $self->get_property( "multiple" ) )
+	{
+		my $complexType = $session->make_element( "xs:complexType" );
+		$element->appendChild( $complexType );
+		my $sequence = $session->make_element( "xs:sequence" );
+		$complexType->appendChild( $sequence );
+		my $item = $session->make_element( "xs:element", name => $datasetid, maxOccurs => "unbounded", type => $self->get_xml_schema_type() );
+		$sequence->appendChild( $item );
+	}
+	else
+	{
+		$element->setAttribute( type => $self->get_xml_schema_type() );
+	}
+
+	return $element;
+}
+
+sub get_xml_schema_type
+{
+	my( $self ) = @_;
+
+	return "dataset_".$self->get_property( "datasetid" );
+}
+
+sub render_xml_schema_type
+{
+	my( $self, $session ) = @_;
+
+	return $session->make_doc_fragment;
+}
+
 ######################################################################
 1;
